# cove

./: CHANGELOG.md  CONFIG.md  Cargo.toml  README.md  flake.nix  room.md  rustfmt.toml
.github/workflows/: build.yml
cove/: Cargo.toml
cove-config/: Cargo.toml
cove-config/src/: doc.rs  euph.rs  keys.rs  lib.rs
cove-core/: Cargo.toml
cove-core/src/: conn.rs  id.rs  lib.rs  macros.rs  message.rs  packets.rs  session.rs  user.rs
cove-input/: Cargo.toml
cove-input/src/: event.rs  groups.rs  input.rs  keys.rs  lib.rs
cove-macro/: Cargo.toml
cove-macro/src/: document.rs  group.rs  key_group.rs  lib.rs  util.rs
cove-server/: Cargo.toml
cove-server/src/: conn.rs  main.rs  util.rs
cove-tui/: Cargo.toml
cove-tui/src/: backend.rs  chat.rs  client.rs  config.rs  cove.rs  euph.rs  log.rs  main.rs  never.rs  replies.rs  room.rs  store.rs  textline.rs  traits.rs  ui.rs  vault.rs
cove-tui/src/backend/: cove.rs
cove-tui/src/backend/cove/: conn.rs  room.rs
cove-tui/src/chat/: tree.rs
cove-tui/src/chat/tree/: action.rs  blocks.rs  constants.rs  cursor.rs  layout.rs  render.rs  util.rs
cove-tui/src/client/cove/: conn.rs  room.rs
cove-tui/src/cove/: conn.rs  room.rs
cove-tui/src/euph/: api.rs  conn.rs  room.rs
cove-tui/src/euph/api/: events.rs  packet.rs  room_cmds.rs  session_cmds.rs  types.rs
cove-tui/src/store/: dummy.rs
cove-tui/src/ui/: cove.rs  input.rs  layout.rs  overlays.rs  pane.rs  room.rs  rooms.rs  styles.rs  textline.rs
cove-tui/src/ui/cove/: body.rs  users.rs
cove-tui/src/ui/overlays/: join_room.rs  switch_room.rs
cove-tui/src/ui/room/: users.rs
cove-tui/src/vault/: euph.rs  migrate.rs
cove/src/: euph.rs  export.rs  logger.rs  macros.rs  main.rs  store.rs  ui.rs  util.rs  vault.rs  version.rs
cove/src/euph/: highlight.rs  room.rs  small_message.rs  util.rs
cove/src/export/: json.rs  text.rs
cove/src/ui/: chat.rs  euph.rs  key_bindings.rs  rooms.rs  util.rs  widgets.rs
cove/src/ui/chat/: blocks.rs  cursor.rs  renderer.rs  tree.rs  widgets.rs
cove/src/ui/chat/tree/: renderer.rs  scroll.rs  widgets.rs
cove/src/ui/euph/: account.rs  auth.rs  inspect.rs  links.rs  nick.rs  nick_list.rs  popup.rs  room.rs
cove/src/ui/rooms/: connect.rs  delete.rs
cove/src/ui/widgets/: list.rs  popup.rs
cove/src/vault/: euph.rs  migrate.rs  prepare.rs
src/: chat.rs  config.rs  euph.rs  export.rs  logger.rs  macros.rs  main.rs  replies.rs  store.rs  ui.rs  util.rs  vault.rs
src/chat/: tree.rs
src/chat/tree/: blocks.rs  cursor.rs  layout.rs  render.rs
src/euph/: conn.rs  message.rs  room.rs  small_message.rs  util.rs
src/euph/api/: packet.rs  types.rs
src/export/: json.rs  text.rs
src/ui/: chat.rs  chat2.rs  editor.rs  euph.rs  input.rs  list.rs  room.rs  rooms.rs  util.rs  util2.rs  widget.rs  widgets.rs  widgets2.rs
src/ui/chat/: blocks.rs  renderer.rs  tree.rs
src/ui/chat/tree/: action.rs  blocks.rs  cursor.rs  layout.rs  render.rs  renderer.rs  time.rs  tree_blocks.rs  util.rs  widgets.rs
src/ui/chat/tree/widgets/: indent.rs  seen.rs  time.rs
src/ui/chat2/: cursor.rs  tree.rs  widgets.rs
src/ui/chat2/tree/: renderer.rs  scroll.rs  widgets.rs
src/ui/euph/: account.rs  auth.rs  inspect.rs  links.rs  nick.rs  nick_list.rs  popup.rs  room.rs
src/ui/widgets/: background.rs  border.rs  cursor.rs  editor.rs  empty.rs  float.rs  join.rs  layer.rs  list.rs  padding.rs  popup.rs  resize.rs  rules.rs  text.rs
src/ui/widgets2/: list.rs  popup.rs
src/vault/: euph.rs  migrate.rs  prepare.rs
