[workspace]
resolver = "2"
members = ["cove", "cove-*"]

[workspace.package]
version = "0.8.3"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive", "deprecated"] }
cookie = "0.18.1"
crossterm = "0.27.0"
directories = "5.0.1"
edit = "0.1.5"
jiff = "0.2.1"
linkify = "0.10.0"
log = { version = "0.4.21", features = ["std"] }
once_cell = "1.19.0"
open = "5.1.3"
parking_lot = "0.12.2"
proc-macro2 = "1.0.83"
quote = "1.0.36"
rusqlite = { version = "0.31.0", features = ["bundled", "time"] }
rustls = "0.23.19"
serde = { version = "1.0.202", features = ["derive"] }
serde_either = "0.2.1"
serde_json = "1.0.117"
syn = "2.0.65"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.13"
unicode-width = "0.1.12"

[workspace.dependencies.euphoxide]
git = "https://github.com/Garmelon/euphoxide.git"
features = ["bot"]

[workspace.dependencies.toss]
git = "https://github.com/Garmelon/toss.git"
tag = "v0.2.3"

[workspace.dependencies.vault]
git = "https://github.com/Garmelon/vault.git"
tag = "v0.4.0"
features = ["tokio"]

[workspace.lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"


[profile.dev.package."*"]
opt-level = 3
