[workspace]
resolver = "3"
members = ["cove", "cove-*"]

[workspace.package]
version = "0.8.3"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
clap = { version = "4.5.30", features = ["derive", "deprecated"] }
cookie = "0.18.1"
crossterm = "0.28.1"
directories = "6.0.0"
edit = "0.1.5"
jiff = "0.2.1"
linkify = "0.10.0"
log = { version = "0.4.25", features = ["std"] }
open = "5.3.2"
parking_lot = "0.12.3"
proc-macro2 = "1.0.93"
quote = "1.0.38"
rusqlite = { version = "0.31.0", features = ["bundled", "time"] }
rustls = "0.23.23"
serde = { version = "1.0.218", features = ["derive"] }
serde_either = "0.2.1"
serde_json = "1.0.139"
syn = "2.0.98"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
unicode-width = "0.2.0"

[workspace.dependencies.euphoxide]
git = "https://github.com/Garmelon/euphoxide.git"
rev = "095d2cea86a574732e82385e217381b35cf65e4d"
features = ["bot"]

[workspace.dependencies.toss]
git = "https://github.com/Garmelon/toss.git"
rev = "423dd100c1360decffc5107ea4757d751ac0f4db"

[workspace.dependencies.vault]
git = "https://github.com/Garmelon/vault.git"
tag = "v0.4.0"
features = ["tokio"]

[workspace.lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unnameable_types = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"

[profile.dev.package."*"]
opt-level = 3
