[package]
name = "cove-core"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.21"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha2 = "0.10.1"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-tungstenite = { version = "0.16.1", features = [
    "rustls-tls-native-roots",
] }
