[package]
name = "cove-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.53"
cove-core = { path = "../cove-core" }
futures = "0.3.21"
rand = "0.8.4"
serde_json = "1.0.78"
thiserror = "1.0.30"
tokio = { version = "1.16.1", features = ["full"] }
tokio-stream = "0.1.8"
tokio-tungstenite = "0.16.1"
