[package]
name = "cove-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
chrono = "0.4.19"
crossterm = "0.23.2"
directories = "4.0.1"
edit = "0.1.4"
parking_lot = "0.12.1"
rusqlite = "0.27.0"
tokio = { version = "1.19.2", features = ["full"] }
toss = { git = "https://github.com/Garmelon/toss.git", rev = "761519c1a7cdc950eab70fd6539c71bf22919a50" }
