[package]
name = "cove-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = "0.23.2"
directories = "4.0.1"
edit = "0.1.4"
futures = "0.3.21"
parking_lot = "0.12.1"
rusqlite = { version = "0.27.0", features = ["chrono"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = "0.17.1"
toss = { git = "https://github.com/Garmelon/toss.git", rev = "761519c1a7cdc950eab70fd6539c71bf22919a50" }
