[package]
name = "cove"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cove-config = { path = "../cove-config" }
cove-input = { path = "../cove-input" }

crossterm = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
toss = { workspace = true }

anyhow = "1.0.86"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive", "deprecated"] }
cookie = "0.18.1"
directories = "5.0.1"
linkify = "0.10.0"
log = { version = "0.4.21", features = ["std"] }
once_cell = "1.19.0"
open = "5.1.3"
rusqlite = { version = "0.31.0", features = ["bundled", "time"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tz-rs = "0.6.14"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.12"

[dependencies.time]
version = "0.3.36"
features = ["macros", "formatting", "parsing", "serde"]

[dependencies.tokio-tungstenite]
version = "0.21.0"
features = ["rustls-tls-native-roots"]

[dependencies.euphoxide]
git = "https://github.com/Garmelon/euphoxide.git"
tag = "v0.5.1"
features = ["bot"]

[dependencies.vault]
git = "https://github.com/Garmelon/vault.git"
tag = "v0.4.0"
features = ["tokio"]

[lints]
workspace = true
